# ai_exercises

./: CMakeLists.txt  CMakePresets.json
src/app/: app.cpp  app.h
src/layer/: layer.cpp  layer.h
src/matrix/: matrix.cpp  matrix.h
src/neural_network/: neural_network.cpp  neural_network.h
src/perceptron/: perceptron.cpp  perceptron.h
src/vector/: vector.cpp  vector.h
tests/: layer_test.cpp  main.cpp  matrix_test.cpp  perceptron_test.cpp  vector_test.cpp
